[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "inepro-metering"
version = "0.1.0"
description = "Protocol and model library for inepro Metering devices"
readme = "README_PACKAGE.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "inepro Metering" }
]
dependencies = [
  "bleak>=2.1,<3",
  "bleak-retry-connector>=4.6,<5",
  "pymodbus==3.11.2",
  "pyserial>=3.5,<4",
]

[project.urls]
Homepage = "https://github.com/ineprometering/home-assistant-inepro-metering"
Repository = "https://github.com/ineprometering/home-assistant-inepro-metering"
Issues = "https://github.com/ineprometering/home-assistant-inepro-metering/issues"

[project.optional-dependencies]
test = [
  "pytest-homeassistant-custom-component>=0.13.108,<0.14",
  "pytest-socket>=0.7,<1",
  "zeroconf>=0.147,<1",
]
build = [
  "build>=1.2,<2",
  "twine>=6,<7",
]
security = [
  "pip-audit>=2.7,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inepro_metering"]

[tool.hatch.build.targets.sdist]
include = [
  "/README_PACKAGE.md",
  "/pyproject.toml",
  "/src/inepro_metering",
]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
